# robolt

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  rustfmt.toml
src/: client.rs  errors.rs  lib.rs
src/api/: account_information.rs  account_settings.rs  auth.rs  avatar.rs  badges.rs  catalog.rs  chat.rs  economy.rs  friends.rs  mod.rs  points.rs  premium_features.rs  presence.rs  routes.rs  users.rs
src/models/: account_settings.rs  accounts_information.rs  auth.rs  badges.rs  economy.rs  friends.rs  mod.rs  points.rs  premium_features.rs  presence.rs  users.rs
src/utilities/: client.rs  errors.rs  mod.rs
src/utils/: client.rs  errors.rs  mod.rs  response.rs
src/web/: auth.rs  badges.rs  mod.rs  users.rs
tests/: account_information.rs  auth.rs  avatar.rs  badges.rs  catalog.rs  friends.rs  points.rs  presence.rs  users.rs  web_auth.rs  web_badges.rs  web_users.rs
